# SkullOfSummer

./: .gitignore  Il processo per costruire il programma.md  LICENSE  README.md  trigraph.c
CMake/: CMakeLists.txt
CMake/src/c/: CMakeLists.txt  awesome_lib.c
CMake/src/include/: awesome_lib.h
ClientServer/: Client.c  Server.c
Comma/: comma.c
Inline/: inlineO3.s  testInline.c  testInlineO0.s
Libraries/: compileLibraries.bash  mathutils.c  mathutils.h  nm_shared  nm_static  randutils.c  randutils.h  useawesome.c
List/: list.c  list.h
LogUtility/: README.md  compileDebug.bash  compileRelease.bash  log.c  log.h  main.c  testLog.c
LogUtility.xcodeproj/: project.pbxproj
LogUtility.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LogUtility.xcodeproj/xcuserdata/RAD.xcuserdatad/xcschemes/: LogUtility.xcscheme  xcschememanagement.plist
LogUtility/log/: common_facilities.h  log.h
Modularity/: main.c  professor.c  professor.h  student.c  student.h  utils.c  utils.h
SkullOfSummerProjectChooser/: .cproject  .project  Makefile
SkullOfSummerProjectChooser/src/main/c/: SkullOfSummerProjectChooser.c  project.c  project_reader.c
SkullOfSummerProjectChooser/src/main/include/: project.h  project_reader.h
TranslationUnit/: compileExample.bash  foo_handler.c  foo_handler.h  my_awesome_program.c  utility.c  utility.h
gdb/: gdb_example.c
pjt/: README.md
pjt/1/: README.md
pjt/2/: README.md
pjt/2017/: README.md
pjt/2017/1/: README.md
pjt/2017/2/: README.md
pjt/2017/4/: README.md
pjt/2017/5/: README.md
pjt/2017/realizzazioni/: AS_Bitmap.c
pjt/2017/realizzazioni/SkullOfSummer_ProgettoDusi/: ArrayList.c  ArrayList.h  BidirectionalList.c  BidirectionalList.h  Conversion.c  Conversion.h  Heap.c  Heap.h  List.c  List.h  UnidirectionalList.c  UnidirectionalList.h
pjt/2017/realizzazioni/TTeamProject/: ClientSUM.c  ClientUSR.c  Server.c  SkullOfSummer_pjt_2 at master · STB1019_SkullOfSummer · GitHub.desktop  clientSUM  clientUSR  server
pjt/2017/realizzazioni/exparse Lorenzo Nodari/: .project  README.md  build.sh
pjt/2017/realizzazioni/exparse Lorenzo Nodari/c/: conversion.c  csv.c  json.c  utils.c
pjt/2017/realizzazioni/exparse Lorenzo Nodari/include/: conversion.h  csv.h  json.h  utils.h
pjt/2017/realizzazioni/exparse Lorenzo Nodari/test/: main.c  test.json  vehiclepositions.json
pjt/2017/realizzazioni/supreme spork/: README.md  README.txt  client  client.c  listSorter  listSorter.c  server  server.c
pjt/2017/realizzazioni/supreme-spork (Stefano Prandini)/: github - StefanoPrandini_supreme-spork.desktop
pjt/3/: README.md
pjt/4/: README.md
pjt/5/: README.md
pjt/6/: README.md
restrict/: baserestrict.c  baserestrict.s  compileTestRestrict.bash  restrictAssert.c  testrestrict.c  withrestrict.c  withrestrict.s
